# imap-codec-python

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  imap_codec.pyi  justfile  test_literal_mode.py
.github/workflows/: bindings_python.yml  main.yml
bindings/imap-codec-python/: Cargo.toml
examples/: client.py  dict_format.py  fragmentizer.py  server.py
examples/common/: __init__.py
src/: encoded.rs  fragmentizer.rs  lib.rs  messages.rs
tests/: test_authenticate_data_decode.py  test_authenticate_data_encode.py  test_command_decode.py  test_command_encode.py  test_fragment_info.py  test_fragmentizer.py  test_fragments.py  test_greeting_decode.py  test_greeting_encode.py  test_line_ending.py  test_literal_announcement.py  test_messages.py  test_response_decode.py  test_response_encode.py
