[package]
name = "imap-codec-python"
description = "Python bindings for imap-codec Rust crate"
keywords = ["email", "imap", "codec", "parser"]
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "imap_codec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.2"
serde = "1.0.228"
serde-pyobject = "0.8.0"

[dependencies.imap-codec]
version = "2.0.0-alpha.6"
features = [
    "serde",
    "quirk_crlf_relaxed",
    "starttls",
    #"ext_condstore_qresync",
    "ext_id",
    #"ext_login_referrals",
    #"ext_mailbox_referrals",
    "ext_metadata",
]
